Alteração serviceB
