# serviceB/cmd/main.go
@@ -2,28 +2,25 @@ package main
 
 import (
 	"fmt"
-	_ "labs-two-service-b/docs"
-	"labs-two-service-b/internal/infra/web/webserver"
+	"labs-two-serviceb/internal/infra/web/webserver"
 
 	httpSwagger "github.com/swaggo/http-swagger"
+	_ "labs-two-serviceb/docs" 
 )
 
-// @title Consulta Tempo
+// @title Tudo Azul API
 // @version 1.0
-// @description Consulta Temperaturas
+// @description Tudo Azul Temperaturas
+// @BasePath /
 func main() {
 	tracingProvider, cleanup := InitializeTracing()
 	defer cleanup()
 
 	getTemp := NewGetTempoHandler()
 
-	go func() {
-        httpServer := webserver.NewWebServer(NewConfig(), tracingProvider)
-		httpServer.AddHandler("GET", "/swagger/*", httpSwagger.WrapHandler)
-		httpServer.AddHandler("POST", "/consulta-tempo", getTemp.HandleLabsTwo)
-		fmt.Println("HTTP server is running")
-		httpServer.Start()
-    }()
-
-    select {} 
+	httpServer := webserver.NewWebServer(NewConfig(), tracingProvider)
+	httpServer.AddHandler("GET", "/swagger/*", httpSwagger.WrapHandler)
+	httpServer.AddHandler("GET", "/get-temp", getTemp.HandleLabsOne)
+	fmt.Println("HTTP server running at port 8080")
+	httpServer.Start()
 }
