# serviceB/docs/swagger.json
@@ -1,15 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Consulta Temperaturas",
-        "title": "Consulta Tempo",
+        "description": "Tudo Azul Temperaturas",
+        "title": "Tudo Azul API",
         "contact": {},
         "version": "1.0"
     },
+    "basePath": "/",
     "paths": {
-        "/consulta-tempo": {
-            "post": {
-                "description": "Consulta temperatura por cidade",
+        "/get-temp": {
+            "get": {
+                "description": "Consulta a temperatura atual baseada no CEP fornecido",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,37 +18,35 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Labs-Two"
+                    "Labs-Two-ServiceB"
                 ],
-                "summary": "Consulta Temperatura",
+                "summary": "Consulta temperatura baseado no CEP",
                 "parameters": [
                     {
-                        "description": "City Request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/labs-two-service-b_internal_entities.TempoRequestDto"
-                        }
+                        "type": "string",
+                        "description": "CEP",
+                        "name": "cep",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/labs-two-service-b_internal_entities.TempoDto"
+                            "$ref": "#/definitions/labs-two-serviceb_internal_entities.GetTempoResponseDto"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/labs-two-service-b_internal_entities.CustomErrors"
+                            "$ref": "#/definitions/labs-two-serviceb_internal_entities.CustomError"
                         }
                     },
                     "422": {
                         "description": "Invalid Zipcode",
                         "schema": {
-                            "$ref": "#/definitions/labs-two-service-b_internal_entities.CustomErrors"
+                            "$ref": "#/definitions/labs-two-serviceb_internal_entities.CustomError"
                         }
                     }
                 }
@@ -55,113 +54,7 @@
         }
     },
     "definitions": {
-        "labs-two-service-b_internal_entities.Condition": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "number"
-                },
-                "icon": {
-                    "type": "string"
-                },
-                "text": {
-                    "type": "string"
-                }
-            }
-        },
-        "labs-two-service-b_internal_entities.Current": {
-            "type": "object",
-            "properties": {
-                "cloud": {
-                    "type": "number"
-                },
-                "condition": {
-                    "$ref": "#/definitions/labs-two-service-b_internal_entities.Condition"
-                },
-                "dewpoint_c": {
-                    "type": "number"
-                },
-                "dewpoint_f": {
-                    "type": "number"
-                },
-                "feelslike_c": {
-                    "type": "number"
-                },
-                "feelslike_f": {
-                    "type": "number"
-                },
-                "gust_kph": {
-                    "type": "number"
-                },
-                "gust_mph": {
-                    "type": "number"
-                },
-                "heatindex_c": {
-                    "type": "number"
-                },
-                "heatindex_f": {
-                    "type": "number"
-                },
-                "humidity": {
-                    "type": "number"
-                },
-                "is_day": {
-                    "type": "number"
-                },
-                "last_updated": {
-                    "type": "string"
-                },
-                "last_updated_epoch": {
-                    "type": "integer"
-                },
-                "precip_in": {
-                    "type": "number"
-                },
-                "precip_mm": {
-                    "type": "number"
-                },
-                "pressure_in": {
-                    "type": "number"
-                },
-                "pressure_mb": {
-                    "type": "number"
-                },
-                "temp_c": {
-                    "type": "number"
-                },
-                "temp_f": {
-                    "type": "number"
-                },
-                "uv": {
-                    "type": "number"
-                },
-                "vis_km": {
-                    "type": "number"
-                },
-                "vis_miles": {
-                    "type": "number"
-                },
-                "wind_degree": {
-                    "type": "number"
-                },
-                "wind_dir": {
-                    "type": "string"
-                },
-                "wind_kph": {
-                    "type": "number"
-                },
-                "wind_mph": {
-                    "type": "number"
-                },
-                "windchill_c": {
-                    "type": "number"
-                },
-                "windchill_f": {
-                    "type": "number"
-                }
-            }
-        },
-        "labs-two-service-b_internal_entities.CustomErrors": {
+        "labs-two-serviceb_internal_entities.CustomError": {
             "type": "object",
             "properties": {
                 "code": {
@@ -172,51 +65,17 @@
                 }
             }
         },
-        "labs-two-service-b_internal_entities.Location": {
+        "labs-two-serviceb_internal_entities.GetTempoResponseDto": {
             "type": "object",
             "properties": {
-                "country": {
-                    "type": "string"
-                },
-                "lat": {
+                "temp_C": {
                     "type": "number"
                 },
-                "localtime": {
-                    "type": "string"
-                },
-                "localtime_epoch": {
-                    "type": "integer"
-                },
-                "lon": {
+                "temp_F": {
                     "type": "number"
                 },
-                "name": {
-                    "type": "string"
-                },
-                "region": {
-                    "type": "string"
-                },
-                "tz_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "labs-two-service-b_internal_entities.TempoDto": {
-            "type": "object",
-            "properties": {
-                "current": {
-                    "$ref": "#/definitions/labs-two-service-b_internal_entities.Current"
-                },
-                "location": {
-                    "$ref": "#/definitions/labs-two-service-b_internal_entities.Location"
-                }
-            }
-        },
-        "labs-two-service-b_internal_entities.TempoRequestDto": {
-            "type": "object",
-            "properties": {
-                "location": {
-                    "type": "string"
+                "temp_K": {
+                    "type": "number"
                 }
             }
         }
