# serviceB/internal/entities/getTempoResponseDto.go
@@ -1,8 +1,7 @@
 package entities
 
 type GetTempoResponseDto struct {
-	Kelvin     float64 `json:"temp_K"`
-	Celsius    float64 `json:"temp_C"`
+	Kelvin float64 `json:"temp_K"`
+	Celsius float64 `json:"temp_C"`
 	Fahrenheit float64 `json:"temp_F"`
-	City       string  `json:"city"`
 }
