# serviceB/internal/infra/web/getHandler.go
@@ -2,11 +2,11 @@ package web
 
 import (
 	"encoding/json"
-	"labs-two-service-b/config"
-	"labs-two-service-b/internal/entities"
-	"labs-two-service-b/internal/infra/services"
-	"labs-two-service-b/internal/infra/tracing"
-	"labs-two-service-b/internal/usecases"
+	"labs-two-serviceb/config"
+	"labs-two-serviceb/internal/entities"
+	"labs-two-serviceb/internal/infra/services"
+	"labs-two-serviceb/internal/infra/tracing"
+	"labs-two-serviceb/internal/usecases"
 	"net/http"
 
 	"go.opentelemetry.io/otel"
@@ -16,45 +16,46 @@ import (
 type GetTempoHandler struct {
 	config                *config.AppSettings
 	GetTempoUseCase       usecases.GetTempoUseCaseInterface
+	ServiceCepInterface   services.ServiceCepInterface
 	ServiceTempoInterface services.ServiceTempoInterface
 	tracingProvider       *tracing.TracingProvider
 }
 
-func NewGetCepHandler(appConfig *config.AppSettings, getTempoUseCase usecases.GetTempoUseCaseInterface, serviceTempo services.ServiceTempoInterface, tracingProvider *tracing.TracingProvider) *GetTempoHandler {
+func NewGetTempoHandler(appConfig *config.AppSettings, getTempoUseCase usecases.GetTempoUseCaseInterface, serviceCep services.ServiceCepInterface, serviceTempo services.ServiceTempoInterface, tracingProvider *tracing.TracingProvider) *GetTempoHandler {
 	return &GetTempoHandler{
 		config:                appConfig,
 		GetTempoUseCase:       getTempoUseCase,
+		ServiceCepInterface:   serviceCep,
 		ServiceTempoInterface: serviceTempo,
 		tracingProvider:       tracingProvider,
 	}
 }
 
-// HandleLabsTwo godoc
-// @Summary Consulta Temperatura
-// @Description Consulta temperatura por cidade
-// @Tags Labs-Two
+// HandleLabsOne godoc
+// @Summary Consulta temperatura baseado no CEP
+// @Description Consulta a temperatura atual baseada no CEP fornecido
+// @Tags Labs-Two-ServiceB
 // @Accept json
 // @Produce json
-// @Param request body entities.TempoRequestDto true "City Request"
-// @Success 200 {object} entities.TempoDto "OK"
-// @Failure 404 {object} entities.CustomErrors "Not Found"
-// @Failure 422 {object} entities.CustomErrors "Invalid Zipcode"
+// @Param request body entities.CepRequestDto true "Consulta temperatura"
+// @Success 200 {object} entities.GetTempoResponseDto "OK"
+// @Failure 404 {object} entities.CustomError "Not Found"
+// @Failure 422 {object} entities.CustomError "Invalid Zipcode"
 // @Router /consulta-tempo [post]
-func (h *GetTempoHandler) HandleLabsTwo(w http.ResponseWriter, r *http.Request) {
+func (h *GetTempoHandler) HandleLabsOne(w http.ResponseWriter, r *http.Request) {
 	ctx := otel.GetTextMapPropagator().Extract(r.Context(), propagation.HeaderCarrier(r.Header))
 	ctx, span := h.tracingProvider.Tracer.Start(ctx, "HandleConsultaTempo")
 	defer span.End()
 
-	var req entities.TempoRequestDto
-	err := json.NewDecoder(r.Body).Decode(&req)
-	if err != nil {
-		http.Error(w, "Invalid request body", http.StatusBadRequest)
+	cep := r.URL.Query().Get("cep")
+	if cep == "" {
+		http.Error(w, "cep is required", http.StatusBadRequest)
 		return
 	}
 
-	response, err := h.GetTempoUseCase.GetTempo(ctx, req.Location)
+	response, err := h.GetTempoUseCase.GetTempo(ctx, cep)
 	if err != nil {
-		customErr, ok := err.(*entities.CustomErrors)
+		customErr, ok := err.(*entities.CustomError)
 		if ok {
 			w.WriteHeader(customErr.Code)
 			json.NewEncoder(w).Encode(customErr)
